displays.)

---
** Mouse wheel scrolling now defaults to one line at a time.

+++
** Mouse wheel scrolling with Shift modifier now scrolls horizontally.
This works in text buffers and over images.  Typing a numeric prefix arg
(e.g. 'M-5') before starting horizontal scrolling changes its step value.
The value is saved in the user option 'mouse-wheel-scroll-amount-horizontal'.

---
** The default value of 'frame-title-format' and 'icon-title-format' has changed.
These variables are used to display the title bar of visible frames
and the title bar of an iconified frame.  They now show the name of
the current buffer and the text "GNU Emacs" instead of the value of
'invocation-name'.  To get the old behavior back, add the following to
your init file:

    (setq frame-title-format '(multiple-frames "%b"
                              ("" invocation-name "@" system-name)))

+++
** 'nobreak-char-display' now also affects all non-ASCII space characters.
Previously, this was limited only to NO-BREAK-SPACE and hyphen
characters.  Now it also covers the rest of the non-ASCII Unicode
space characters.

---
** Prefer "chat.freenode.net" to "irc.freenode.net".
"chat.freenode.net" has been the preferred address for connecting to the
freenode IRC network for years now.  Occurrences of "irc.freenode.net"
have been replaced with "chat.freenode.net" throughout Emacs.

+++
** New functions 'null-device' and 'path-separator'.
These functions return the connection local value of the respective
variables.  This can be used for remote hosts.

** Emacs now prints a backtrace when signaling an error in batch mode.
This makes debugging Emacs Lisp scripts run in batch mode easier.  To
get back the old behavior, set the new variable
'backtrace-on-error-noninteractive' to a nil value.

** 'redisplay-skip-fontification-on-input' helps Emacs keep up with fast input.
This is another attempt to solve the problem of handling high key repeat rate